# download-convert-and-generate-accumulations

./: .editorconfig  .env.example  .gitignore  Dockerfile  composer.json  docker-compose.example.yml  phpunit.xml
.github/workflows/: ci-cd.yml
generate-radaric-mf-values-accumulations/: pyproject.toml  tests.sh
generate-radaric-mf-values-accumulations/generate_radaric_mf_values_accumulations/: arguments.py  datetime_utils.py  generate_radaric_mf_values_accumulations.py  generation.py  main.py  radaric_mf_values_accumulations.py  sql.py  tiles.py
generate-radaric-mf-values-accumulations/tests/: arguments_test.py  datetime_utils_test.py  generate_radaric_mf_values_accumulations_test.py  radaric_mf_values_accumulations_test.py  tiles_test.py
palettes/: LAME_D_EAU_vers_RGBi.pal  radar12h.cpt  radar1h.cpt  radar1m.cpt  radar24h.cpt  radar3h.cpt  radar48h.cpt  radar6h.cpt  radar72h.cpt
src/: conversion.php  date.php  download-and-convert-radar.php  env.php  io.php  meteofrance-api.php  radar.php  tiles.php
tests/integration/: ConversionTest.php  MeteoFranceAPITest.php  RadarTest.php  TilesTest.php
tests/unit/: ConversionTest.php  DateTest.php  MeteoFranceAPITest.php  RadarTest.php  TilesTest.php
